# piecewise-linear-attention

./: .gitignore  README.md  RESEARCH_STATUS.md  THEORY.md  colab_benchmark.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yml
benchmarks/: README.md  benchmark.py  benchmark_attention.py  benchmark_transformer.py  colab_benchmark.ipynb  compare_attention.py  profile_memory.py
benchmarks/harness/: plot_anchor_cache.py  plot_anchor_sweep.py  plot_results.py  run_ablation_jacobian.py  run_anchor_reuse.py  run_cuda_scaling.py  run_epoch_warmup_diag.py  run_jacobian_spectrum.py  run_microbench.py  run_multianchor_profile.py  run_operator_rank_fidelity.py  run_real_activation_fidelity.py  run_recall.py  run_reduced_build.py  run_scaling.py
benchmarks/utils/: __init__.py  data_utils.py  training_utils.py
experiments/: README.md  __init__.py  transformer_configurable.py
experiments/bert/: README.md  colab_bert.ipynb  train.py
experiments/lra/: README.md  colab_lra_benchmark.ipynb
experiments/lra/configs/: base_config.py
experiments/lra/data/: generate_listops.py  listops.py
experiments/lra/models/: encoder.py
experiments/lra/tasks/listops/: train.py
experiments/lra/tests/: test_smoke.py
experiments/lra/utils/: mlflow_tracking.py  training.py
experiments/translation/: README.md  colab_translation.ipynb  train.py
experiments/utils/: __init__.py  data.py
experiments/vision/: README.md  colab_vision.ipynb  train.py
piecewise_linear_attention/: __init__.py
piecewise_linear_attention/core/: __init__.py  anchors.py  attention.py  jacobian.py  profiling.py  pseudo_queries.py  registry.py
piecewise_linear_attention/harness/: __init__.py  config.py  device.py  loop.py  results.py  tracker.py
piecewise_linear_attention/harness/tasks/: __init__.py  synthetic_recall.py
piecewise_linear_attention/models/: __init__.py  bert.py  multihead.py  translation_transformer.py  vit.py
piecewise_linear_attention/tests/: __init__.py  test_ablation_jacobian.py  test_anchors.py  test_attention.py  test_baselines.py  test_causal_masking.py  test_evidence_cli.py  test_harness.py  test_jacobian.py  test_key_padding_mask.py  test_loop_task.py  test_memory_profile.py  test_multihead.py  test_optimization_correctness.py  test_performer.py  test_piecewise_attention.py  test_profiling.py  test_pseudo_queries.py  test_real_activation_fidelity.py  test_registry.py
piecewise_linear_attention/utils/: nearest_neighbor.py
results/: ablation_jacobian.json  anchor_cost_sweep.json  anchor_reuse.json  cuda_scaling_a100.json  cuda_scaling_anchors_a100.json  jacobian_spectrum.json  jacobian_spectrum_gpu_d128.json  microbench.json  multianchor_profile.json  operator_rank_fidelity_d128.json  real_activation_fidelity.json  real_activation_fidelity_nucleus.json  recall.json  recall_n32.json  recall_n64_12k_3seed.json  recall_n64_curve.json  reduced_accuracy_gate_d128.json  reduced_build_a100.json  scaling.json
results/lra/listops/: REPORT_10ep.md  onehot_apply_fix_verification.json  results.json  warmup_backward_attribution.json
